; ModuleID = '/home/carl/AnghaBench/tmux/extr_arguments.c_args_has.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_arguments.c_args_has.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.args = type { i32 }
%struct.args_entry = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @args_has(%struct.args* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.args*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.args_entry*, align 8
  store %struct.args* %0, %struct.args** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.args*, %struct.args** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call %struct.args_entry* @args_find(%struct.args* %7, i32 %8)
  store %struct.args_entry* %9, %struct.args_entry** %6, align 8
  %10 = load %struct.args_entry*, %struct.args_entry** %6, align 8
  %11 = icmp eq %struct.args_entry* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.args_entry*, %struct.args_entry** %6, align 8
  %15 = getelementptr inbounds %struct.args_entry, %struct.args_entry* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %12
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local %struct.args_entry* @args_find(%struct.args*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
